<resources>
    <string name="app_name">Ribbit</string>

    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="Username">username_hint</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_name">LOGIN</string>
    <string name="sing_up_text">Don\'t have an account? Sign Up</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_btn">Sign Up!</string>
    <string name="sign_up_error_message">Please make sure you enter an username, password and email</string>
    <string name="sign_up_error_title">Oops an Error has occurred</string>
    <string name="login_error_message">Please make sure you enter an username and password</string>
    <string name="login_error_title">Oops an Error has occurred</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="title_section3">Section 3</string>
    <string name="empty_list">There is not data to display</string>
    <string name="action_edit_friend">Edit Friend</string>
    <string name="title_activity_edit_friends">EditFriendsActivity</string>
    <string name="action_camera">Camera</string>
    <string name="error_storage">There was a problem accessing your device\'s external storage</string>
    <string name="simple_error">Sorry, there was an error!</string>
    <string name="storage_video">The selected video must be less than 10mb</string>
    <string name="file_not_found">We cannot find this file</string>
    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>
    <string name="title_activity_choose_recipients">ChooseRecipients</string>
    <string name="choose_recipients">Choose some friends first</string>
    <string name="action_send">Send</string>
    <string name="error_with_selected_file">There was an error with the selected  file</string>
    <string name="message_ok">Message sent!</string>
    <string name="error_sending_msg">There was an error sending your message</string>
    <string name="title_activity_view_image">ViewImageActivity</string>
    <string name="background_desc">Ribbit Frog Background</string>
    <string name="subtitle">Destructive messages</string>
    <string name="cancel">Cancel</string>
    <string name="btnDivider">Button Divider</string>
    <string name="message_icon">Message icon</string>
    <string name="refresh">We\\\'re refreshing</string>
    <string name="userAvatar">user Avatar</string>
    <string name="checkedUserAvatar">Cheked image</string>
    <string name="push_message">You have a new message from %s!</string>
</resources>
