<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AuthBackground"
    tools:context="doge.thecraftcod.ribbit.ui.SignUpActivity">

    <include layout="@layout/auth_common" />

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">

    <EditText
        style="@style/AuthEditText"
        android:inputType="textPersonName"
        android:hint="@string/username_hint">
        <requestFocus/>
    </EditText>

    <EditText
        style="@style/AuthEditText"
        android:inputType="textPassword"
        android:id="@+id/password"
        android:hint="@string/password_hint" />

    <EditText
        android:inputType="textEmailAddress"
        android:id="@+id/emailField"
        android:hint="@string/email_hint"
        style="@style/AuthEditText" />

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonDivider"
        android:layout_below="@+id/editTextLayout"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/button_divider"
        android:contentDescription="@string/btnDivider"
        />

    <Button
        android:text="@string/sign_up_btn"
        android:id="@+id/signupBtn"
        style="@style/AuthButton"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextLayout"
        android:layout_toLeftOf="@+id/buttonDivider"
        android:layout_marginRight="0dp"
        />
    <Button
        android:text="@string/cancel"
        android:id="@+id/cancelBtn"
        style="@style/AuthButton"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editTextLayout"
        android:layout_toRightOf="@+id/buttonDivider"
        android:layout_marginLeft="0dp"
        />
</RelativeLayout>
