<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="doge.thecraftcod.ribbit.LoginActivity"
    android:background="@color/background_purple">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/backgroundImage"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@mipmap/background"
        android:scaleType="fitXY"
        android:contentDescription="@string/background_desc"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/title"
        android:textSize="60sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle"
        android:id="@+id/subtitle"
        android:textColor="@android:color/white"
        android:layout_below="@+id/title"
        android:textStyle="bold"
        android:textSize="13sp"
        android:layout_centerHorizontal="true" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/editTextLayout"
        android:layout_below="@+id/subtitle"
        android:layout_alignStart="@+id/backgroundImage"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:background="@android:color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/username"
            android:hint="@string/username_hint"
            android:layout_below="@+id/subtitle"
            android:layout_alignParentStart="true"
            android:textColorHint="@color/light_gray"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:hint="@string/password_hint"
            android:layout_below="@+id/username"
            android:layout_alignStart="@+id/backgroundImage"
            android:textColorHint="@color/light_gray"
            android:textSize="18sp" />



    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_name"
        android:id="@+id/loginBtn"
        android:layout_below="@+id/editTextLayout"
        android:layout_marginBottom="42dp"
        android:layout_alignStart="@+id/backgroundImage"
        android:background="@drawable/button_custom"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:textSize="13sp"
        android:textColor="#250054" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sing_up_text"
        android:id="@+id/sing_up"
        android:textSize="13sp"
        android:textColor="@android:color/white"
        android:layout_below="@+id/loginBtn"
        android:layout_centerHorizontal="true" />




</RelativeLayout>
